# fireschedule

./: .gitignore  config.yaml  pyproject.toml
data/learning/: 2026-03-13_learn-20260313203614.md
fireschedule_src/: __main__.py
fireschedule_src/cli/: __init__.py  commands.py  main.py
fireschedule_src/config/: loader.py
fireschedule_src/integrations/: gcal.py  notion.py
fireschedule_src/notifications/: __init__.py  scheduler.py  service.py
fireschedule_src/tui/: __init__.py  app.py  screens.py  theme.py  widgets.py
scripts/: backup.sh
src/: __main__.py
src/cli/: __init__.py  commands.py  main.py
src/config/: __init__.py
src/fireschedule.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/integrations/: __init__.py  gcal.py  notion.py
src/models/: events.py
src/notifications/: __init__.py  config.py  scheduler.py
src/storage/: markdown.py
src/tui/: __init__.py  app.py  screens.py  theme.py  widgets.py
tests/: test_events.py
