[project]
name = "fireschedule"
version = "0.1.0"
description = "TUI-based personal scheduling assistant"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "rich>=13.0",
    "textual>=0.50.0",
    "pydantic>=2.0",
    "python-dateutil>=2.8",
    "click>=8.0",
    "plyer>=2.1",
    "apscheduler>=3.10",
    "requests>=2.31",
]

[project.scripts]
fireschedule = "src.cli.main:cli"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
